preparing for alpha release

--- a/core/src/main/assets/messages/actors/actors.properties
+++ b/core/src/main/assets/messages/actors/actors.properties
@@ -340,8 +340,8 @@ actors.hero.talent.apprentices_intuition.title=apprentice's intuition
 actors.hero.talent.apprentices_intuition.desc=_+1:_ The Apprentice identifies rings and wands _1.5x faster_.\n\n_+2:_ The Apprentice identifies rings and wands _2x faster_ and _identifies scrolls on pickup_.
 actors.hero.talent.philosophile.title=Philosophile
 actors.hero.talent.philosophile.desc=_+1:_ Whenever the Apprentice identifies an item, she gets motivated for _10 turns_.\n\n_+2:_ Whenever the Apprentice identifies an item, she gets motivated for _35 turns_.
-actors.hero.talent.magic_shield.title=iron will
-actors.hero.talent.magic_shield.desc=_+1:_ The max shield provided by the Apprentice's seal is _increased by 1_.\n\n_+2:_ The max shield provided by the Apprentice's seal is _increased by 2_.
+actors.hero.talent.magic_shield.title=magic shield
+actors.hero.talent.magic_shield.desc=_+1:_ Casting with the spell hand at yourself grants _2 shielding_.\n\n_+2:_ Casting with the spell hand at yourself grants _3 shielding_.
 actors.hero.talent.unleashing_meal.title=unleashing meal
 actors.hero.talent.unleashing_meal.desc=_+1:_ Eating food takes the Apprentice 1 turn and grants her _3 turns of fire imbue_ or _4 turns of frost imbue_.\n\n_+2:_ Eating food takes the Apprentice 1 turn and grants her _6 turns of fire imbue_ or _8 turns of frost imbue_.
 actors.hero.talent.matter_dissipation.title=matter dissipation
