misc fixes + wands only overload with charges > 4

--- a/core/src/main/assets/messages/items/items.properties
+++ b/core/src/main/assets/messages/items/items.properties
@@ -12,6 +12,8 @@ items.spells.aquablast.optimized_transmutation_desc1=\n\nWith the help of _optim
 items.spells.aquablast.optimized_transmutation_desc2=With the help of _optimized transmutation_ this spell paralyses the target for _2_ more turns.
 items.spells.beaconofreturning.optimized_transmutation_desc1=
 items.spells.beaconofreturning.optimized_transmutation_desc2=
+items.spells.spellhand.optimized_transmutation_desc1=
+items.spells.spellhand.optimized_transmutation_desc2=
 items.spells.curseinfusion.optimized_transmutation_desc1=
 items.spells.curseinfusion.optimized_transmutation_desc2=
 items.spells.featherfall.optimized_transmutation_desc1=\n\nWith the help of _optimized transmutation_ the effect lasts for _twice_ as long.
