fixed wandmaker text and avatar for apprentice

--- a/core/src/main/assets/messages/actors/actors.properties
+++ b/core/src/main/assets/messages/actors/actors.properties
@@ -604,7 +604,7 @@ actors.mobs.npcs.shopkeeper.sell=Sell an item
 actors.mobs.npcs.shopkeeper.desc=This stout guy looks more appropriate for a trade district in some large city than for a dungeon. His prices explain why he prefers to do business here.
 
 actors.mobs.npcs.wandmaker.name=old wandmaker
-actors.mobs.npcs.wandmaker.intro_apprentice=Oh, what a pleasant surprise to meet a hero in such a depressing place! If you're up to helping an old man out, I may have a task for you.
+actors.mobs.npcs.wandmaker.intro_apprentice=Greetings, young miss! A student, I see? I have a rewarding task for you, if you're willing to help.
 actors.mobs.npcs.wandmaker.intro_rogue=Oh Goodness, you startled me! I haven't met a bandit from this place that still has his sanity, so you must be from the surface! If you're up to helping a stranger out, I may have a task for you.
 actors.mobs.npcs.wandmaker.intro_mage=Oh, hello %s! I heard there was some ruckus regarding you and the wizards institute? Oh never mind, I never liked those stick-in-the-muds anyway. If you're willing, I may have a task for you.
 actors.mobs.npcs.wandmaker.intro_huntress=Oh, hello miss! A friendly face is a pleasant surprise down here isn't it? In fact, I swear I've seen your face before, but I can't put my finger on it... Oh never mind, if you're here for adventure, I may have a task for you.
