--- a/core/src/main/assets/messages/actors/actors.properties
+++ b/core/src/main/assets/messages/actors/actors.properties
@@ -348,8 +348,8 @@ actors.hero.talent.matter_dissipation.title=matter dissipation
 actors.hero.talent.matter_dissipation.desc=_+1:_ Items destroyed using explosions or traps will release a _cloud of smokescreen_.\n\n_+2:_ Items destroyed using explosions or traps will release a _cloud of smokescreen twice as big_.
 actors.hero.talent.optimized_transmutation.title=optimized transmutation
 actors.hero.talent.optimized_transmutation.desc=_+1:_ The efficiency of some spells is increased and some alchemy costs reduced.\n\n_+2:_ Further reduction in costs and improvements of spells. 
-actors.hero.talent.energy_redirect.title=lethal momentum
-actors.hero.talent.energy_redirect.desc=_+1:_ When the Apprentice lands a killing blow with a physical weapon, it has a _67% chance_ to take 0 turns.\n\n_+2:_ When the Apprentice lands a killing blow with a physical weapon, it has a _100% chance_ to take 0 turns.
+actors.hero.talent.energy_redirect.title=coming soon
+actors.hero.talent.energy_redirect.desc=
 actors.hero.talent.arcane_stabilization.title=arcane stabilization
 actors.hero.talent.arcane_stabilization.desc=_+1:_ The chance to successfully cast with Spell Hand is increased from 50% to _60% for enemies_ and from 33% to _37.5% for tiles_.   \n\n_+2:_ The chance to successfully cast with Spell Hand is increased from 50% to _75% for enemies_ and from 33% to _42.8% for tiles_.
 actors.hero.talent.rune_imbuement.title=rune imbuement
