huntress potion bottom text

--- a/core/src/main/assets/messages/items/items.properties
+++ b/core/src/main/assets/messages/items/items.properties
@@ -1,6 +1,7 @@
 ###clairvoyantpd content
 
-
+items.potions.potionofhuntress.name=potion of huntress
+items.potions.potionofhuntress.desc=You really shouldn't drink that.
 items.spells.spellhand.name=Spell hand
 items.spells.spellhand.desc=Apprentice's ability to use magic. Current possible effects:\n\nOn ally: heal for 1-5 HP\n\nOn enemy:\n-Damage for _0-TBA_ damage\n- Affect with _1_ turn of vertigo\n\nOn self:\n- Grant _8_ turns of light\n- Grant _1.5_ shielding per point in Magic Shield\n\nOn tiles:\n- Grow plants on _high grass_\n- Freeze _any_ tile\n- Press _any_ tile\n- Summon storm clouds on _water_
 items.spells.spellhand.no_catalyst=You need to have an arcane catalyst in your inventory for this.
