huntress potion tweaks

--- a/core/src/main/assets/messages/scenes/scenes.properties
+++ b/core/src/main/assets/messages/scenes/scenes.properties
@@ -51,6 +51,7 @@ scenes.interlevelscene$mode.continue=Loading...
 scenes.interlevelscene$mode.resurrect=Resurrecting...
 scenes.interlevelscene$mode.return=Returning...
 scenes.interlevelscene$mode.fall=Falling...
+scenes.interlevelscene$mode.transform=Oh no...
 scenes.interlevelscene$mode.reset=Resetting...
 scenes.interlevelscene.install=Install the Game
 scenes.interlevelscene.file_not_found=Save file not found. If this error persists after restarting, it may mean this save game is corrupted. Sorry about that.
