added power bracelet

--- a/core/src/main/assets/messages/items/items.properties
+++ b/core/src/main/assets/messages/items/items.properties
@@ -1,5 +1,8 @@
 ###clairvoyantpd content
 
+items.weapon.melee.powerbracelet.name=power bracelet
+items.weapon.melee.powerbracelet.stats_desc=This weapon launches bursts of electrity forwards upon hitting an enemy.
+items.weapon.melee.powerbracelet.desc=The weight and the uncomfortable shape of this shiny metallic bracelet won't let you use other weapons together with it. However, it projects a miniature force field in front of itself, allowing it to inflict more damage than your hand would.
 items.potions.potionofhuntress.name=potion of huntress
 items.potions.potionofhuntress.desc=You really shouldn't drink that.
 items.spells.spellhand.name=Spell hand
