--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
         jcenter()
     }
     dependencies {
+        //noinspection AndroidGradlePluginVersion
         classpath 'com.android.tools.build:gradle:4.1.3'
     }
 }
@@ -14,8 +15,8 @@ allprojects {
         appName = 'Clairvoyant Pixel Dungeon'
         appPackageName = 'com.clairvoyantpd.clairvoyantpixeldungeon'
 
-        appVersionCode = 1002
-        appVersionName = 'CvPD-Alpha-2'
+        appVersionCode = 1003
+        appVersionName = 'CvPD-Alpha-3'
 
         appJavaCompatibility = JavaVersion.VERSION_1_8
 
