neighbors8 bomb explode

--- a/core/src/main/assets/messages/scenes/scenes.properties
+++ b/core/src/main/assets/messages/scenes/scenes.properties
@@ -54,8 +54,8 @@ scenes.interlevelscene$mode.fall=Falling...
 scenes.interlevelscene$mode.transform=Oh no...
 scenes.interlevelscene$mode.reset=Resetting...
 scenes.interlevelscene.install=Install the Game
-scenes.interlevelscene.file_not_found=Save file not found. If this error persists after restarting, it may mean this save game is corrupted. Sorry about that.
-scenes.interlevelscene.io_error=Cannot read save file. If this error persists after restarting, it may mean this save game is corrupted. Sorry about that.
+scenes.interlevelscene.file_not_found=Save file not found. If this error persists after restarting, it may mean this save game is corrupted. Please report as soon as possible.
+scenes.interlevelscene.io_error=Cannot read save file. If this error persists after restarting, it may mean this save game is corrupted. Please report as soon as possible.
 
 scenes.introscene.text=Many heroes have ventured into the dungeon before you from the city above. Some have returned with treasures and magical artifacts, most have never been heard from again.\n\nNone, however, have ventured to the bottom and retrieved the Amulet of Yendor, which is said to be guarded by an ancient evil in the depths. Even now dark energy radiates from below, making its way up into the city.\n\nYou consider yourself ready for the challenge. Most importantly, you feel that fortune smiles upon you. It's time to start your own adventure!
 
@@ -97,16 +97,16 @@ scenes.titlescene.about=About
 scenes.titlescene.support=Support the Game
 scenes.titlescene$changesbutton.title=An Update is Available!
 scenes.titlescene$changesbutton.versioned_title=Update Available: %s
-scenes.titlescene$changesbutton.desc=Shattered Pixel Dungeon is regularly updated with overhauls to existing game content, or entirely new content!\n\nGame balance is also frequently improved in game updates, so that specific items/heroes/enemies aren't too strong or too weak.\n\nUpdates also include fixes for bugs and other various stability improvements.
+scenes.titlescene$changesbutton.desc=how'd you get here
 scenes.titlescene$changesbutton.update=Go to Update Page
 scenes.titlescene$changesbutton.changes=Current Changes Screen
 scenes.titlescene.patreon_body=Here's evan's patreon 
 scenes.titlescene.patreon_button=Patreon Page
 
 scenes.welcomescene.welcome_msg=__Welcome to Clairvoyant PD ALPHA! Everything is broken, from UI to balance! \n\nHappy Dungeoneering!
-scenes.welcomescene.update_intro=Shattered Pixel Dungeon has been updated!
+scenes.welcomescene.update_intro=Clairvoyant Pixel Dungeon has been updated!
 scenes.welcomescene.update_msg=v0.9.2 adds the third tier of the talent system, which interacts with hero subclasses and is the most significant tier yet!\n\nThere are also a bunch of balance changes to the various classes/subclasses, and enemies in the late prison and deeper.\n\nBe sure to check the changes screen for full details.
-scenes.welcomescene.patch_intro=Shattered Pixel Dungeon has been patched!
+scenes.welcomescene.patch_intro=Clairvoyant Pixel Dungeon has been patched!
 scenes.welcomescene.patch_bugfixes=This patch contains bugfixes.
 scenes.welcomescene.patch_translations=This patch contains translation updates.
 scenes.welcomescene.patch_balance=This patch contains tweaks to game balance.
